Changed the image source

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div>
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="skill-img" src="https://cdn-icons.flaticon.com/png/512/2021/premium/2021700.png?token=exp=1647441216~hmac=3d5519d6386cd818d9ea69b9b7d9da3f" alt="skill-img">
+        <img class="skill-img" src="images/computer.png" alt="skill-img">
         <h3>ASP.NET Developement and Full Stack Development</h3>
         <p>Have good grasp on the software technologies and try to implement it with zero delivery defect.</p>
       </div>
