changed the skill hot image

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <p>Have good grasp on the software technologies and try to implement it with zero delivery defect.</p>
       </div>
       <div class="skill-row">
-        <img class="skill-hot" src="https://cdn-icons.flaticon.com/png/512/1207/premium/1207441.png?token=exp=1647441423~hmac=e684a16c18d1e0264ea3e4957eb0ff9e" alt="skill-list">
+        <img class="skill-hot" src="images/chillies.png" alt="skill-list">
         <h3>Hot Skills</h3>
         <p>.NET Core, HTML5, CSS, Bootstrap, Javascript, Backend Engineering</p>
       </div>
